[web-animations] setting the composite property on a keyframe effect should invalidate the target style https://bugs.webkit.org/show_bug.cgi?id=237356

Reviewed by Dean Jackson.

LayoutTests/imported/w3c:

* web-platform-tests/web-animations/animation-model/keyframe-effects/effect-value-context-filling-expected.txt:

Source/WebCore:

* animation/KeyframeEffect.cpp:
(WebCore::KeyframeEffect::setComposite):
* animation/KeyframeEffect.h:
(WebCore::KeyframeEffect::setComposite): Deleted.



Canonical link: https://commits.webkit.org/247986@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290741 268f45cc-cd09-0410-ab3c-d52691b4dbfc